--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.example.matrixscanviews.qrdetection.QRdetectionActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
